<resources>
    <string name="app_name">TextbookTrader</string>
    <string name="title_activity_main">Textbook Trader</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="pref_images">Display Images</string>
    <string name="pref_images_summ">The application will download images</string>
    <string name="friend_list">Friends</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="profile_city_button">City</string>
    <string name="profile_cell_button">Cell</string>
    <string name="profile_age_button">Age</string>
    <string name="profile_gender_button">Gender</string>
    <string name="profile_comment_button">What\'s up</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_pending">PendingActivity</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
</resources>
