<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="team16project.textbooktrader.ProfileActivity"
              android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="New Text"
            android:id="@+id/textView"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_city_button"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_cell_button"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_age_button"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_gender_button"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_comment_button"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"/>
</LinearLayout>
